<resources >
	<string name = "app_name" >少儿网络助手</string >
	<string name = "action_settings" >Settings</string >

	<string name = "confirm_password" >请再次输入6位密码</string >
	<string name = "set_password_again" >两次密码不匹配，请重新设置密码</string >
	<string name = "input_password" >请输入6位密码</string >
	<string name = "wrong_password" >密码错误！</string >
	<string name = "parent_login" >家长登录</string >

	<string name = "start" >开启</string >
	<string name = "shutdown" >关闭</string >
	<string name = "tips" >无论何种浏览器，何种内置网页，网站防火墙都会保护你远离恶意网址</string >

	<string name = "block_title" >该页面有风险，已被拦截</string >

	<string name = "setting" >设置</string >

	<string name = "setting_run_when_boot_completed" >开机启动</string >
	<string name = "setting_prevent_uninstall" >预防卸载</string >
	<string name = "setting_feedback" >意见反馈</string >
	<string name = "setting_about" >关于</string >

	<string name = "admin_receiver_description" >预防少儿网络助手被未授权用户卸载。</string >
	<string name = "admin_request_description" >预防少儿网络助手被未授权用户卸载</string >

	<string name = "feed_edit_advise_text_hint" >请把你们的宝贵意见反馈给我们~</string >
	<string name = "feed_edit_connect_text_hint" >请留下你的联系方式（QQ、邮箱或电话号码）</string >

	<string name = "warning_when_disable_admin_manager" >警告：如果停止此选项，任何人都可以卸载TD网页防火墙，将无法保障您的上网安全。</string >

	<string name = "preparing" >正在准备……</string >
	<string name = "updating_config" >正在更新配置……</string >

	<string name = "about_version" >当前版本：%1$s</string >
	<string name = "about_description1" >少儿网络助手利用一个简单的VPN，深入系统层面，无论是系统内置浏览器，第三方浏览器，还是APP内置浏览器，都可以帮你拦截掉所有的恶意网址，钓鱼网站。</string >
	<string name = "about_description" >少儿网络助手是一款简单、易用、免费的网络监控工具，主要针对少年儿童进行量身定制，限制少年儿童无限制使用移动设备。提供的日志记录功能，可准确的了解您不在的情况下移动设备的网络使用情况。少儿网络助手工作在IP层能够有效地拦截所有网络请求，给孩子们一个绿色、安全的网络环境！</string >
	<string name = "about_extra_info" >注：恶意网址库来源于http://www.mwsl.org.cn</string >

	<string name = "guide_start_right_now" >立即体验</string >
    <string name="home_page">首页</string>
	<string name="about_page">关于</string>
	<string name="settings_page">设置</string>
	<string name="protect_feature_title">保护功能</string>
	<string name="protect_feature_sub_title_started">保护功能已开启</string>
	<string name="protect_feature_sub_title_stopped">保护功能已关闭</string>
	<string name="log_feature_title">查看日志</string>
	<string name="log_feature_sub_title">查看违规行为和操作日志</string>
	<string name="setting_feature_title">设置</string>
	<string name="setting_feature_sub_title">设置规律规则</string>
	<string name="about_feature_title">关于</string>
	<string name="about_feature_sub_title">查看软件信息</string>
    <string name="white_list">白名单</string>
    <string name="IP_domian_list">IP、域名列表</string>
	<string name="content_list">内容列表</string>
    <string name="parent_password_login">家长密码登录</string>
	<string name="stop_navigate_x">阻止访问%s</string>
	<string name="stop_navigate_content_with_x">阻止访问%1$s - %2$s</string>
	<string name="start_protect">开启保护功能</string>
	<string name="stop_protect">关闭保护功能</string>
	<string name="log">日志</string>
	<string name="order_asc">升序</string>
    <string name="change_to_white_list">切换到白名单</string>
	<string name="change_to_black_list">切换到黑名单</string>
	<string name="insert_x_to_white_list">添加白名单：%1$s</string>
	<string name="insert_x_to_black_list">添加黑名单：%1$s</string>
    <string name="succeeded_to_save_setting">设置保存完毕</string>
    <string name="set_time_range_x_to_x">设置上网时间段%1$s - %2$s</string>
	<string name="set_time_duration_x">设置上网时长%s分钟</string>
	<string name="prevent_uninstall">防止卸载</string>
    <string name="succeeded_to_set_parent_password">家长密码设置成功</string>
	<string name="allow_to_navigate_x">允许访问%1$s</string>
</resources >
